RESOLVED FIXED185542
Network process should not stat() all cache files on startup to find their sizes
https://bugs.webkit.org/show_bug.cgi?id=185542
Summary Network process should not stat() all cache files on startup to find their sizes
Antti Koivisto
Reported 2018-05-11 00:38:45 PDT
We can estimate the records sizes to avoid lots of CPU use and I/O under stat().
Attachments
patch (5.58 KB, patch)
2018-05-11 01:14 PDT, Antti Koivisto
cdumez: review+
patch (5.58 KB, patch)
2018-05-11 10:32 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2018-05-11 00:39:50 PDT
Antti Koivisto
Comment 2 2018-05-11 01:14:07 PDT
Chris Dumez
Comment 3 2018-05-11 10:27:32 PDT
Comment on attachment 340178 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=340178&action=review > Source/WebKit/ChangeLog:12 > + Large bodies are saved in seprate blob files so record file sizes are capped. We can avoid work by typo: seprate
Antti Koivisto
Comment 4 2018-05-11 10:32:54 PDT
WebKit Commit Bot
Comment 5 2018-05-11 11:11:27 PDT
Comment on attachment 340197 [details] patch Clearing flags on attachment: 340197 Committed r231708: <https://trac.webkit.org/changeset/231708>
WebKit Commit Bot
Comment 6 2018-05-11 11:11:29 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.